back1/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back1
  labels:
    app: back1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back1
  template:
    metadata:
      labels:
        app: back1
    spec:
      containers:
      - name: nginx-back1
        image: nginx:1.7.9
        ports:
        - containerPort: 80
