back1/service.yml
---

kind: Service
apiVersion: v1
metadata:
  name: back1
spec:
  selector:
    app: back1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
